...
    <string name="home_recent_rename">Renamed</string>
    <string name="home_recent_title">Recent activity</string>
    <string name="home_recent_upload">Uploaded</string>
    <!-- Home -->
    <string name="home_session_title">Session</string>
    <string name="home_system_title">System status</string>
    <string name="home_value_percent">%1$.1f%%</string>
    <string name="home_value_uptime_days_hours">%1$d d %2$d h</string>
    <string name="home_value_uptime_hours_minutes">%1$d h %2$d min</string>
    <string name="home_value_uptime_minutes_seconds">%1$d min %2$d s</string>
    <string name="home_value_uptime_seconds">%1$d s</string>
    <string name="home_value_used_of_total">%1$s of %2$s</string>
</resources>
...
